force-app/main/default/objects/Lead_Product__c/Lead_Product__c.object-meta.xml
<CustomObject>
    <description>A Junction Object created between to lead and product objects to capture the</description>
    <label>Lead Product</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Lead Product No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>