force-app/main/default/objects/Lead_Product__c/fields/Catalog_Code__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Code__c</fullName>
    <description>code</description>
    <label>Catalog Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>