force-app/main/default/objects/Lead_Product__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead product is seleacted on</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Products</relationshipLabel>
    <relationshipName>Lead_Products</relationshipName>
    <type>Lookup</type>
</CustomField>