force-app/main/default/objects/Lead_Product__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Products</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lead Products</relationshipLabel>
    <relationshipName>Lead_Products</relationshipName>
    <type>Lookup</type>
</CustomField>