force-app/main/default/objects/Lead_Product__c/fields/Volume_Units__c.field-meta.xml
<CustomField>
    <fullName>Volume_Units__c</fullName>
    <label>Volume Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>