force-app/main/default/objects/Lead_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Products__c</columns>
    <columns>Volume_Pallets__c</columns>
    <columns>Volume_Units__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Catalog_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>